# libfev

./: .clang-format  CMakeLists.txt  README.md  libfev.pc.in
.github/workflows/: ci.yml
cmake/: TargetArch.cmake
docs/: SchedulerStrategies.md
examples/: CMakeLists.txt  condition-variable++.cpp  connect++.cpp  echo++.cpp  echo-timeout++.cpp  echo-timeout.c  echo.c  fibonacci++.cpp  key-value++.cpp
include/fev/: config.h.in  fev++.hpp  fev.h
src/: fev_alloc.c  fev_alloc.h  fev_arch.h  fev_arch_x86.h  fev_assert.h  fev_bounded_mpmc_queue.h  fev_bounded_spmc_queue.h  fev_compiler.h  fev_cond.c  fev_cond_impl.h  fev_cond_intf.h  fev_context.h  fev_context_i386.S  fev_context_x86_64_posix.S  fev_context_x86_family.c  fev_fiber.c  fev_fiber.h  fev_fiber_attr.c  fev_fiber_attr.h  fev_ilock.c  fev_ilock_impl.h  fev_ilock_intf.h  fev_mutex.c  fev_mutex_impl.h  fev_mutex_intf.h  fev_os.h  fev_os_nix.c  fev_os_win.c  fev_poller.h  fev_poller_epoll.c  fev_poller_epoll.h  fev_poller_io_uring.c  fev_poller_io_uring.h  fev_poller_kqueue.c  fev_poller_kqueue.h  fev_poller_reactor.c  fev_poller_reactor.h  fev_qsbr.h  fev_qsbr_queue.h  fev_sched_attr.c  (+61 more)
tests/: CMakeLists.txt  sleep.c  stress_cond.c  stress_cond_with_timeout.c  stress_ilock.c  stress_mpmc_queue.c  stress_mutex.c  stress_mutex_with_timeout.c  stress_qsbr_queue.c  stress_sem.c  stress_sem_with_timeout.c  stress_thr_mutex.c  timers_bucket.c  util.h
